Track overhaul finished Issue : canvas not visible after drawing

--- a/Client/style.css
+++ b/Client/style.css
@@ -100,6 +100,7 @@ li.listSeparator {
 }
 
 .unselectable {
+	cursor: default;
 	        user-select: none;
 	-webkit-user-select: none;
 	   -moz-user-select: none;
@@ -164,6 +165,9 @@ input.volumeControl {
 }
 
 div.trackTopContainer {
+	width: 100%;
+	height: 25%;
+	max-height: 130px;
 	border-bottom: 2px solid #3a3a3a;
 	z-index: 2;
 }
@@ -384,13 +388,35 @@ div.trackMenuTitle {
 
 div.trackToolsContainer {
 	width: 100%;
-	height:calc(100% - 60px);
 	clear:both;
-	padding:6px 0 0 0;
+	padding:4px 0 0 0;
+}
+
+div.trackBalanceVolume {
+	width: 100%;
+	height: 36px;
+	float: none;
+	clear: both;
+	padding: 0 0 4px 0;
+	font-size: 10px;
+}
+
+div.trackBalanceVolumeLabel {
+	display: inline-block;
+	width: 16px;
+	height: 16px;
+	line-height: 16px;
 }
 
 div.trackButton {
 	cursor: pointer;
+}
+
+img.trackButton {
+	width: auto;
+	height: 100%;
+	max-width: 60px;
+	max-height: 60px;
 }
 
 canvas.trackCanvas {
